# agent-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install-pmb-proxy.sh  metamcp-example.env  pmb-proxy.service  pyproject.toml  run-worker  setup-podman.sh
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_drop_pg_notify_trigger.py  c3d4e5f6a7b8_create_agent_definitions_table.py  fb0df2b9147c_create_agent_events_table.py
design-docs/: memory.md
src/agent_server/: __init__.py  config.py  main.py  model.py  test_client.py  voice_client.py
src/agent_server/memory/: __init__.py  cursor_store.py  letta_memory.py
src/agent_server/pipecat/: __init__.py  letta_llm.py  state_handlers.py  user_turn_aggregator.py
src/agent_server/provider/: __init__.py  anthropic.py  letta.py
src/agent_server/provisioning/: __init__.py  agents.py  blocks.py  cli.py
src/agent_server/worker/: __init__.py  jobs.py
src/agent_server/worker/jobs/: __init__.py  heartbeat.py  session_boundary.py  summarize.py
src/kairix_agent/: __init__.py  agent_config.py  config.py  logging_config.py
src/kairix_agent/events/: __init__.py  models.py  payloads.py  publisher.py
src/kairix_agent/memory/: __init__.py  cursor_store.py  letta_memory.py  models.py
src/kairix_agent/provisioning/: __init__.py  agents.py  blocks.py  cli.py  models.py  prompts.py
src/kairix_agent/scripts/: run_insights.py  test_jobs.py
src/kairix_agent/server/: __init__.py  main.py  vad.py
src/kairix_agent/server/events/: __init__.py  connection_manager.py  listener.py
src/kairix_agent/server/pipecat/: __init__.py  letta_llm.py  state_handlers.py  user_turn_aggregator.py
src/kairix_agent/server/provider/: __init__.py  anthropic.py  base.py  letta.py
src/kairix_agent/worker/: __init__.py  settings.py
src/kairix_agent/worker/jobs/: __init__.py  insights.py  session_boundary.py  summarize.py  transcript.py
tests/pipecat/: test_user_turn_aggregator.py
